--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ Desktop.ini
 *.so
 *.egg
 *.egg-info
+*.zip
+*.7z
 dist
 build
 
@@ -15,3 +17,6 @@ build
 db.ini
 deploy_key_rsa
 data/*
+out/*
+doc/*
+src/logs/*
